Fix HTML encoding issues in paimants.html

--- a/paimants.html
+++ b/paimants.html
@@ -65,10 +65,11 @@ function sendOrder(){
         "Phone: " + phone + "%0A" +
         "Address: " + address;
 
-    let whatsapp = "9470XXXXXXX"; // YOUR NUMBER
+    let whatsapp = "0704845611"; // YOUR NUMBER
     window.open("https://wa.me/" + whatsapp + "?text=" + msg, "_blank");
 }
 </script>
 
 </body>
 </html>
+
